--- a/frontend/react_final_task_frontend/index.html
+++ b/frontend/react_final_task_frontend/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="PlantMore Store" />
+    <meta name="keywords" content="plants, gardening, trees" />
+    <meta name="author" content="Vismantas" />
     <title>PlantMore Store</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/images/icons8-tree-16.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
